# reemc_robot

./: README.md  stack.xml
reemc_bringup/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
reemc_bringup/config/: approach_planner.yaml  approach_planner_full.yaml  approach_planner_full_ft_hey5.yaml  approach_planner_full_no_hands.yaml  joy_teleop.yaml  reemc_full_ft_hey5_hardware.yaml  reemc_full_ft_hey5_motions.yaml  reemc_full_hardware.yaml  reemc_motions.yaml  sitting_buttons.yaml  sitting_motions.yaml  walk_poses.yaml  walk_poses_full.yaml  walk_poses_full_ft_hey5.yaml
reemc_bringup/config/twist_mux/: joystick.yaml  twist_mux.yaml
reemc_bringup/launch/: chair_sit.launch  joystick_teleop.launch  mobile_base.launch  play_motion.launch  reemc.launch  reemc_bringup.launch  twist_mux.launch  walk_pose.launch
reemc_bringup/scripts/: motions_loader.py
reemc_controller_configuration/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
reemc_controller_configuration/config/: current_limit_controllers.yaml  hand_full_controllers.yaml  hand_full_ft_hey5_controllers.yaml  hey5_controllers.yaml  homing_controller.yaml  init_offset_controller.yaml  joint_state_controller.yaml  joint_trajectory_controllers.yaml  legs_effort.yaml  legs_position.yaml  offsets.reemc-1c.yaml  offsets.reemc-2c.yaml  offsets.reemc-3c.yaml  offsets.yaml  walk_poses_full.yaml  walk_poses_full_ft_hey5.yaml  walking_controller.yaml  walking_controller_lowerbody.yaml  walking_params.yaml
reemc_controller_configuration/config/local_joint_control/actuator_parameters/: arm_left_1_joint.yaml  arm_left_2_joint.yaml  arm_left_3_joint.yaml  arm_left_4_joint.yaml  arm_left_5_joint.yaml  arm_left_6_joint.yaml  arm_left_7_joint.yaml  arm_right_1_joint.yaml  arm_right_2_joint.yaml  arm_right_3_joint.yaml  arm_right_4_joint.yaml  arm_right_5_joint.yaml  arm_right_6_joint.yaml  arm_right_7_joint.yaml  head_1_joint.yaml  head_2_joint.yaml  leg_left_1_joint.yaml  leg_left_2_joint.yaml  leg_left_3_joint.yaml  leg_left_4_joint.yaml  leg_left_5_joint.yaml  leg_left_6_joint.yaml  leg_right_1_joint.yaml  leg_right_2_joint.yaml  leg_right_3_joint.yaml  leg_right_4_joint.yaml  leg_right_5_joint.yaml  leg_right_6_joint.yaml  torso_1_joint.yaml  torso_2_joint.yaml
reemc_controller_configuration/config/local_joint_control/direct_effort_control/: direct_effort_control_arm_left_1_joint.yaml  direct_effort_control_arm_left_2_joint.yaml  direct_effort_control_arm_left_3_joint.yaml  direct_effort_control_arm_left_4_joint.yaml  direct_effort_control_arm_left_5_joint.yaml  direct_effort_control_arm_left_6_joint.yaml  direct_effort_control_arm_left_7_joint.yaml  direct_effort_control_arm_right_1_joint.yaml  direct_effort_control_arm_right_2_joint.yaml  direct_effort_control_arm_right_3_joint.yaml  direct_effort_control_arm_right_4_joint.yaml  direct_effort_control_arm_right_5_joint.yaml  direct_effort_control_arm_right_6_joint.yaml  direct_effort_control_arm_right_7_joint.yaml
reemc_controller_configuration/config/local_joint_control/direct_position_control/: direct_position_control_arm_left_1_joint.yaml  direct_position_control_arm_left_2_joint.yaml  (+26 more)
reemc_controller_configuration/launch/: current_limit_controllers.launch  default_controllers.launch  half_walking_half_jtc.launch  hey5_controller.launch  homing_controller.launch  init_offset_controller.launch  joint_trajectory_controllers.launch  legs_effort.launch  legs_position.launch  load_walking_params.launch  reemc_walking_controller.launch  sitting_controller.launch  step_when_pushed.launch  walk_pose.launch  walking_controller.launch
reemc_controller_configuration/launch/local_joint_control/: direct_control.launch
reemc_controller_configuration/scripts/: load_walking_offsets.sh
reemc_controller_configuration_reemc_1/: CHANGELOG.rst  CMakeLists.txt  package.xml
reemc_controller_configuration_reemc_3/: CHANGELOG.rst  CMakeLists.txt  package.xml
reemc_controller_configuration_reemc_3/config/: walking_params.yaml
reemc_description/: CHANGELOG.rst  CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml
reemc_description/gazebo/: gazebo.urdf.xacro
reemc_description/meshes/base/: base.dae
reemc_description/meshes/chessboard/: chessboard.dae
reemc_description/meshes/hand/: hand_thumb_collision.stl
reemc_description/meshes/head/: head_1.dae  head_2.dae  head_2_v1.stl
reemc_description/meshes/leg/: leg_1.dae  leg_3.dae  leg_4.dae  leg_6.dae
reemc_description/meshes/torso/: torso_2.dae
reemc_description/robots/: 2dof_head.urdf.xacro  2dof_torso.urdf.xacro  3dof_wrist.urdf.xacro  7dof_arm.urdf.xacro  reem-c-skeleton.urdf  reem_upper_body.urdf.xacro  reemc.lower_body.urdf.xacro  reemc.upper_body.urdf.xacro  reemc.urdf.xacro  reemc_foot.urdf.xacro  reemc_full.urdf.xacro  reemc_full_chessboard.urdf.xacro  reemc_full_ft_hey5.urdf.xacro  reemc_full_no_hands.urdf.xacro  reemc_lower_body.urdf.xacro  reemc_only_legs.urdf  reemc_xtion_pro_live.urdf.xacro  upload_reemc.launch
reemc_description/test/: test_reemc_full_hand.test  test_reemc_full_hand_old_head.test  test_reemc_full_no_hand.test  test_reemc_full_no_hand_old_head.test  test_reemc_lower_body.test  test_reemc_lower_body_old_head.test
reemc_description/urdf/arm/: arm.transmission.xacro  arm.urdf.xacro  wrist.transmission.xacro  wrist.urdf.xacro
reemc_description/urdf/foot/: foot.urdf.xacro
reemc_description/urdf/hand/: hand.gazebo.xacro  hand.transmission.xacro  hand.urdf.xacro  hand.urdf_copy.xacro
reemc_description/urdf/head/: head.transmission.xacro  head.urdf.xacro  head_v0.urdf.xacro  head_v1.urdf.xacro
reemc_description/urdf/leg/: leg.transmission.xacro  leg.urdf.xacro
reemc_description/urdf/sensors/: back_camera.urdf.xacro  ftsensor.gazebo.xacro  ftsensor.urdf.xacro  imu.urdf.xacro  laser.gazebo.xacro  prosilica_stereo_camera.gazebo.xacro  prosilica_stereo_camera.urdf.xacro  range.gazebo.xacro  stereo_camera.urdf.xacro
reemc_description/urdf/torso/: torso.transmission.xacro  torso.urdf.xacro
reemc_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+67 files in other folders)
