<?xml version="1.0"?>
<package>
  <name>reemc_bringup</name>
  <version>0.9.1</version>
  <description>Launch files and scripts needed to bring up the ROS nodes of a REEM-C robot.</description>
  <maintainer email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</maintainer>
  <maintainer email="paul.mathieu@pal-robotics.com">Paul Mathieu</maintainer>
  <license>Modified BSD</license>
  <author email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>reemc_controller_configuration</run_depend>
  <run_depend>reemc_description</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>pal_mobile_base</run_depend>
  <run_depend>joy_teleop</run_depend>
  <run_depend>play_motion</run_depend>

</package>
