<?xml version="1.0"?>
<package>
  <name>reemc_controller_configuration</name>
  <version>0.9.3</version>
  <description>Launch files and scripts needed to configure
    the controllers of the REEM-C robot.</description>
  <maintainer email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</maintainer>
  <maintainer email="paul.mathieu@pal-robotics.com">Paul Mathieu</maintainer>
  <license>Modified BSD</license>
  <author email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>walking_controller</run_depend>
  <run_depend>reemc_init_offset_controller</run_depend>
  <run_depend>head_action</run_depend>

</package>
