<?xml version="1.0"?>
<package>
  <name>reemc_controller_configuration</name>
  <version>0.10.11</version>
  <description>Launch files and scripts needed to configure
    the controllers of the REEM-C robot.</description>
  <maintainer email="luca.marchionni@pal-robotics.com">Luca Marchionni</maintainer>
  <maintainer email="hilario.tome@pal-robotics.com">Hilario Tome</maintainer>
  <license>Modified BSD</license>
  <author email="luca.marchionni@pal-robotics.com">Luca Marchionni</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>imu_sensor_controller</run_depend>
  <run_depend>force_torque_sensor_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>walking_controller</run_depend>
  <run_depend>reemc_init_offset_controller</run_depend>
  <run_depend>head_action</run_depend>
  <run_depend>simple_grasping_action</run_depend>
  <run_depend>walking_utils</run_depend>
</package>
