<?xml version="1.0"?>
<package>
  <name>reemc_description</name>
  <version>1.0.8</version>
  <description>This package contains the description (mechanical, kinematic, visual,
      etc.) of the REEM-C robot.  The files in this package are parsed and used by
      a variety of other components.  Most users will not interact directly
      with this package.</description>
  <maintainer email="paul.mathieu@pal-robotics.com">Paul Mathieu</maintainer>
  <license>Creative Commons BY-NC-ND 3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>xacro</run_depend>
  <run_depend>hey5_description</run_depend>
  <run_depend>pal_transmissions</run_depend>
  <run_depend>realsense_gazebo_plugin</run_depend>

  <test_depend>rostest</test_depend>
  <test_depend>urdf_test</test_depend>

</package>
