<?xml version="1.0"?>
<package>
  <name>reemc_robot</name>
  <version>0.9.5</version>
  <description>Description and launch files for the REEM-C robot</description>
  <maintainer email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</maintainer>
  <maintainer email="paul.mathieu@pal-robotics.com">Paul Mathieu</maintainer>
  <license>BSD</license>
  <author email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>reemc_description</run_depend>
  <run_depend>reemc_bringup</run_depend>
  <run_depend>reemc_controller_configuration</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
